k8s/jira/jira-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: jira
  name: jira
spec:
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8080
  selector:
    io.kompose.service: jira
status:
  loadBalancer: {}
